Unmatched names return empty string

--- a/MeSH-Symptom-Matcher.ipynb
+++ b/MeSH-Symptom-Matcher.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -44,7 +44,7 @@
     "        returned_list = [disease, sub_returned]\n",
     "        return(returned_list)\n",
     "    except:\n",
-    "        returned_list = [disease, 'NA']\n",
+    "        returned_list = [disease, '']\n",
     "        return(returned_list)\n",
     "\n",
     "# takes in a symptom and finds the corresponding MeSH symptom ID\n",
@@ -59,13 +59,13 @@
     "        returned_list = [symptom, sub_returned]\n",
     "        return(returned_list)\n",
     "    except:\n",
-    "        returned_list = [symptom, 'NA']\n",
+    "        returned_list = [symptom, '']\n",
     "        return(returned_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -85,22 +85,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello there\n",
-      "Hello there\n",
-      "Hello there\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# creates reference for MeSH disease IDs\n",
     "your_list = MeSH_disease_extract('Disease-Occurence-Input.tsv')\n",
